Improve accessibility and SEO

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
   <title>CuentosKillaFE</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Cuentos de Killa - Lecturas infantiles y familiares en Perú">
+  <meta name="keywords" content="cuentos, niños, Perú, lectura, Killa">
+  <meta property="og:title" content="Cuentos de Killa">
+  <meta property="og:description" content="Descubre y compra cuentos infantiles peruanos en línea">
+  <meta property="og:image" content="/assets/killa.bmp">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
